libbson 1.13.0
==============

It is my pleasure to announce libbson 1.13.0.

Features:

  * New functions to save and restore progress of a bson_iter_t:
    bson_iter_key_len, bson_iter_offset, and bson_iter_init_from_data_at_offset
  * Additional functions bson_iter_overwrite_date_time, bson_iter_overwrite_oid,
    and bson_iter_overwrite_timestamp. All fixed-length BSON values can now be
    updated in place.

Bug fixes:

  * Fix crash when iterating corrupt BSON.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Roberto C. Sánchez
  * Kevin Albertson
  * Henrik Edin
  * Gustaf Neumann
  * Scott Gayou
  * Spencer McKenney

Peace,

    Kevin Albertson


libbson 1.12.0
==============

It is my pleasure to announce libbson 1.12.0. This release deprecates all
MD5-related public APIs; they will be removed in the next major release.

Bug fixes:

  * Properly handle zero-length BSON binary values
  * Fix crash parsing Base64-encoded data in JSON when using libbson without
    libmongoc

Thanks to everyone who contributed to the development of this release.

  * Roberto C. Sánchez
  * A. Jesse Jiryu Davis
  * Kevin Albertson

Peace,

    A. Jesse Jiryu Davis


libbson 1.11.0
==============

It is my pleasure to announce libbson 1.11.0. This version adds the following
features and improvements:

  * All "destroy" functions such as bson_destroy or bson_reader_destroy now
    ignore a NULL argument.
  * Replace MD5 with FNV-1a hash to generate ObjectIds (for FIPS compliance).

Bug fixes:

  * Functions incorrectly marked with the "const" compiler attribute are now
    marked as "pure", fixes build error when link-time optimization is enabled.

Thanks to everyone who contributed to the development of this release.

  *  A. Jesse Jiryu Davis
  *  Kevin Albertson
  *  Roberto C. Sánchez

Peace,

    A. Jesse Jiryu Davis


libbson 1.10.3
==============
